Revision history for Perl application Lstu

0.12 ????-??-??
	- Improve LDAP User Authentication Support (beware of configuration
	  changes!) <Ira W.  Snyder>
	  - Allow users to configure maximum number of database connections
	  <Ira W.  Snyder>
	- Update dependencies
	- Fix bugs

0.11-2 2018-03-22
	- Update packages dependencies in README
	- Fix CI

0.11-1 2018-03-22
	- Update dependencies

0.11 2018-03-22
	- Add home link to stats page
	- Fix copy-to-clipboard button
	- Option to blacklist URLs whose path part matches the configured regex

0.10 2018-02-22
	- Performance improvments (cache + assets minification)
	- Add /stats/:short API endpoint
	- Update API page
	- Zanata integration (https://trad.framasoft.org)

0.09-2 2017-09-05
	- Handle redirections without host

0.09-1 2017-09-05
	- Handle redirections without host

0.09 2017-09-05
	- Add QRcode generation
	- Option to disable the spamhaus check (#29)
	- Option to blacklist and/or whitelist domains (#30)
	- Option to set the maximum number of redirections (#31)
	- Instance statistics available at /fullstats URL
	- Now return 404 status for non-existent URLs

0.08 2017-02-08
	- Add Piwik tracking option
	- Add Minion option for async counters increasing
	- Add LDAP and Htpasswd authentication (#8)
	- Add Database abstraction layer
	- Add PostgreSQL (#21)
	- Allow to run several Lstu's instances from the same code but with
	  different configuration files (#23)
	- Cache dependencies for the different stages of the CI
	- Allow whitelisted IPs to bypass anti-spam/anti-bruteforce systems (#24)
	- Add breton translation

0.07 2016-12-20
	- Add logo
	- Add theme system
	- Better Spamhaus checking
	- Add ban system
	- Add occitan translation
	- Add Milligram theme
	- Add cache system
	- Add hashed_adminpwd option

0.06 2015-09-04
	- Add Spamhaus checking before accepting the URL
	- Fix small bug

0.05 2015-07-31
	- Add copy-to-clipboard button (#1)
	- Add test suite
	- Add Net::Domain::TLD >= 1.73 as dependancy
